chore: useCase